--- a/HTML forms.html
+++ b/HTML forms.html
@@ -5,21 +5,21 @@
     <title>HTML Forms</title>
   </head>
   <body>
-    <Forms>
-      <label>Name:</label>
-      <input type="text" name="" value="">
-      <input type="Submit" name="" value="">
-      <input type="file" name="" value="">
-      <input type="date" name="" value="">
-      <input type="radio" name="" value="">
-      <input type="range" name="" value="">
-      <input type="button" name="" value="">
-      <input type="checkbox" name="" value="">
-      <input type="color" name="" value="">
-      <input type="datetime-local" name="" value="">
-      <input type="email" name="" value="">
-      <input type="hidden" name="" value="">
-      <input type="image" name="" value="">
-    </Forms>
+        <Forms>
+          <h1>My attempt at HTML forms</h1>
+          <strong><label>Name:</label></strong>
+          <input type="text" name="" value=""><br>
+          <strong>Submit:</strong><input type="Submit" name="Submit" value=""><br>
+          <strong>File upload:</strong><input type="file" name="Upload a file" value=""><br>
+          <strong>Date:</strong><input type="date" name="Date" value=""><br>
+          <strong>Radio:</strong><input type="radio" name="Select" value=""><br>
+          <strong>Range:</strong><input type="range" name="Range" value=""><br>
+          <strong>Button:</strong><input type="button" name="Select" value=""><br>
+          <strong>Checkbox:</strong><input type="checkbox" name="Checkbox" value=""><br>
+          <strong>Colour selector:</strong><input type="color" name="Select color" value=""><br>
+          <strong>Email:</strong><input type="email" name="Email" value=""><br>
+          <strong>Hidden:</strong><input type="hidden" name="Hidden" value=""><br>
+          <strong>Image:</strong><input type="image" name="Image" value=""><br>
+        </Forms>
   </body>
 </html>
